RESOLVED FIXED 199012
REGRESSION: ( r246394 ) webgpu/whlsl-buffer-fragment.html and webgpu/whlsl-buffer-vertex.html are failing
https://bugs.webkit.org/show_bug.cgi?id=199012
Summary REGRESSION: ( r246394 ) webgpu/whlsl-buffer-fragment.html and webgpu/whlsl-bu...
Attachments
WIP (233.42 KB, patch)
2019-06-20 19:17 PDT, Myles C. Maxfield
no flags
WIP (233.43 KB, patch)
2019-06-20 19:49 PDT, Myles C. Maxfield
no flags
Needs test harness update (233.70 KB, patch)
2019-06-20 23:33 PDT, Myles C. Maxfield
no flags
Patch (239.03 KB, patch)
2019-06-21 14:42 PDT, Myles C. Maxfield
no flags
fails tests (240.30 KB, patch)
2019-06-24 19:29 PDT, Myles C. Maxfield
no flags
Patch (246.89 KB, patch)
2019-06-25 17:00 PDT, Myles C. Maxfield
saam: review+
Patch for committing (246.94 KB, patch)
2019-06-25 18:31 PDT, Myles C. Maxfield
ews-watchlist: commit-queue-
Archive of layout-test-results from ews107 for mac-highsierra-wk2 (2.72 MB, application/zip)
2019-06-25 20:10 PDT, EWS Watchlist
no flags
Patch for committing (246.55 KB, patch)
2019-06-25 20:13 PDT, Myles C. Maxfield
no flags
Patch for committing (246.62 KB, patch)
2019-06-25 20:22 PDT, Myles C. Maxfield
no flags
Truitt Savell
Comment 1 2019-06-19 09:59:44 PDT
Radar WebKit Bug Importer
Comment 2 2019-06-19 10:02:36 PDT
Saam Barati
Comment 3 2019-06-19 17:10:52 PDT
Why not mark this as flaky? They're only failing on high Sierra AFAIK
Ryan Haddad
Comment 4 2019-06-19 17:18:49 PDT
(In reply to Saam Barati from comment #3) > Why not mark this as flaky? They're only failing on high Sierra AFAIK Instead of flaky, we should mark them as failing specifically for High Sierra. Took care of that in https://trac.webkit.org/changeset/246619/webkit
Alexey Proskuryakov
Comment 5 2019-06-20 01:36:00 PDT
Is it High Sierra specific or GPU specific? I believe we use older hardware there.
Myles C. Maxfield
Comment 6 2019-06-20 08:53:42 PDT
I’m in the process of checking now.
Myles C. Maxfield
Comment 7 2019-06-20 15:59:59 PDT
This bug is both High-Sierra AND GPU-specific. The test passes on this GPU on Mojave, and the test passes on High Sierra on other hardware.
Myles C. Maxfield
Comment 8 2019-06-20 19:17:29 PDT
Myles C. Maxfield
Comment 9 2019-06-20 19:18:01 PDT
Assigning this to Justin to bring this across the finish line.
Myles C. Maxfield
Comment 10 2019-06-20 19:49:28 PDT
Myles C. Maxfield
Comment 11 2019-06-20 23:33:35 PDT
Created attachment 372618 [details] Needs test harness update
Justin Fan
Comment 12 2019-06-21 12:51:54 PDT
Comment on attachment 372618 [details] Needs test harness update View in context: https://bugs.webkit.org/attachment.cgi?id=372618&action=review > Source/WebCore/platform/graphics/gpu/cocoa/GPUDeviceMetal.mm:44 > + if (deviceName.startsWith("Intel(R) Iris(TM) Graphics ")) I'm sure we have more than one generation of MBP with Intel Iris graphics (Iris 5100, Iris 6100, Iris 540). Will this only affect the one(s)we're concerned about? > Source/WebCore/platform/graphics/gpu/cocoa/GPUDeviceMetal.mm:48 > + return false; Is this line ever reached? > LayoutTests/webgpu/bind-groups.html:10 > + getBasicDevice().then(function(device) { promise_test callback should return the promise created by .then(). > LayoutTests/webgpu/pipeline-layouts.html:25 > + getBasicDevice().then(async function(device) { ditto.
Myles C. Maxfield
Comment 13 2019-06-21 13:59:19 PDT
(In reply to Justin Fan from comment #12) > Comment on attachment 372618 [details] > Needs test harness update > > View in context: > https://bugs.webkit.org/attachment.cgi?id=372618&action=review > > > Source/WebCore/platform/graphics/gpu/cocoa/GPUDeviceMetal.mm:44 > > + if (deviceName.startsWith("Intel(R) Iris(TM) Graphics ")) > > I'm sure we have more than one generation of MBP with Intel Iris graphics > (Iris 5100, Iris 6100, Iris 540). Will this only affect the one(s)we're > concerned about? AFAIK this is a driver problem, and all those GPUs share a driver. At least 5000 and 6100 share a driver. So I think we want to disallow the whole line. > > > Source/WebCore/platform/graphics/gpu/cocoa/GPUDeviceMetal.mm:48 > > + return false; > > Is this line ever reached? > > > LayoutTests/webgpu/bind-groups.html:10 > > + getBasicDevice().then(function(device) { > > promise_test callback should return the promise created by .then(). > > > LayoutTests/webgpu/pipeline-layouts.html:25 > > + getBasicDevice().then(async function(device) { > > ditto.
Myles C. Maxfield
Comment 14 2019-06-21 14:42:16 PDT
Myles C. Maxfield
Comment 15 2019-06-24 19:29:40 PDT
Created attachment 372816 [details] fails tests
Myles C. Maxfield
Comment 16 2019-06-25 17:00:08 PDT
Saam Barati
Comment 17 2019-06-25 17:10:18 PDT
Comment on attachment 372877 [details] Patch r=me
Myles C. Maxfield
Comment 18 2019-06-25 18:31:55 PDT
Created attachment 372889 [details] Patch for committing
EWS Watchlist
Comment 19 2019-06-25 20:10:08 PDT
Comment on attachment 372889 [details] Patch for committing Attachment 372889 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/12576755 New failing tests: webgpu/whlsl-read-modify-write.html webgpu/whlsl-use-undefined-variable.html webgpu/whlsl-use-undefined-variable-2.html
EWS Watchlist
Comment 20 2019-06-25 20:10:10 PDT
Created attachment 372896 [details] Archive of layout-test-results from ews107 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Myles C. Maxfield
Comment 21 2019-06-25 20:13:02 PDT
Created attachment 372897 [details] Patch for committing
Myles C. Maxfield
Comment 22 2019-06-25 20:22:14 PDT
Created attachment 372898 [details] Patch for committing
Myles C. Maxfield
Comment 23 2019-06-26 12:35:36 PDT
Note You need to log in before you can comment on or make changes to this bug.