Source/WebCore/platform/graphics/gpu/cocoa/GPUDeviceMetal.mm
@@ -32,9 +32,25 @@
 #import "Logging.h"
 
 #import <Metal/Metal.h>
+#import <pal/spi/cocoa/MetalSPI.h>
 #import <wtf/BlockObjCExceptions.h>
 
 namespace WebCore {
+
+static bool isAcceptableDevice(id <MTLDevice> device)
+{
+#if USE(INTEL_METAL_WORKAROUND)
+    BEGIN_BLOCK_OBJC_EXCEPTIONS;
+    if ([[static_cast<id <MTLDeviceSPI>>(device) vendorName] isEqualToString:@"Intel(R)"] && [[static_cast<id <MTLDeviceSPI>>(device) familyName] isEqualToString:@"Iris(TM) Graphics"])
+        return false;
+    return true;
+    END_BLOCK_OBJC_EXCEPTIONS;
+    return false;
+#else
+    UNUSED_PARAM(device);
+    return true;
+#endif
+}
 
 RefPtr<GPUDevice> GPUDevice::tryCreate(const Optional<GPURequestAdapterOptions>& options)
 {
@@ -47,6 +63,8 @@ RefPtr<GPUDevice> GPUDevice::tryCreate(const Optional<GPURequestAdapterOptions>&
         auto devices = adoptNS(MTLCopyAllDevices());
         
         for (id <MTLDevice> device : devices.get()) {
+            if (!isAcceptableDevice(device))
+                continue;
             if (device.lowPower) {
                 devicePtr = device;
                 break;
@@ -58,6 +76,9 @@ RefPtr<GPUDevice> GPUDevice::tryCreate(const Optional<GPURequestAdapterOptions>&
 #endif // PLATFORM(MAC)
     if (!devicePtr)
         devicePtr = adoptNS(MTLCreateSystemDefaultDevice());
+
+    if (!isAcceptableDevice(devicePtr.get()))
+        devicePtr.clear();
 
     END_BLOCK_OBJC_EXCEPTIONS;
 
